# signal-conditioner

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md
.claude/: settings.json
.github/workflows/: ci.yml  profiling.yml
docs/: 01-project-setup.md  02-development-workflow.md  03-testing-workflow.md  04-profiling-workflow.md
include/: fft.hpp  filter.hpp  ingestion.hpp  player.hpp
scripts/: plot.py  pre-commit-check.sh
src/: filter.cpp  ingestion.cpp  main.cpp  player.cpp
tests/: CMakeLists.txt  test_fft.cpp  test_filter.cpp  test_ingestion.cpp  test_player.cpp
